# medium

./: CONTROL_MEDIUM_SKILL.md  README.md  index.html  landing.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  commands.md  configuration.md  development.md  ghost-authoring.md  ghost-manifest.md  importing-ghosts.md  index.html  releases.md  skills.md
scripts/: redeploy-daemon.sh
skills/medium-rituals/: SKILL.md
skills/medium-rituals/references/: install.md  patterns.md
src/: ghosts.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  ghost_manager.rs  ipc.rs  lib.rs  logging.rs  main.rs  manifest.rs  mcp.rs  protocol.rs  tts.rs
src-tauri/src/cli/: config_cmd.rs  daemon.rs  doctor.rs  import.rs  init.rs  integrate.rs  list.rs  logs.rs  mod.rs  preview.rs  scaffold.rs  status.rs  validate.rs
src-tauri/src/cli/import/: aseprite.rs
src/assets/ghosts/vita/: ghost.toml
templates/: claude-project.mcp.json  copilot-global.mcp-config.json  copilot-workspace.mcp.json  medium.config.toml
