[package]
name = "medium"
version = "0.1.0"
description = "Medium: The spirit vessel for agentic manifestations"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "medium"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
futures-util = { version = "0.3.32", features = ["sink"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
clap = { version = "4.6.0", features = ["derive"] }
rmcp = { version = "1.3.0", features = ["schemars", "server", "transport-io"] }
schemars = "1.2.1"
async-trait = "0.1.89"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
tempfile = "3.27.0"
toml = "0.8.23"
base64 = "0.22"
image = "0.25"

[dev-dependencies]
tempfile = "3.27.0"

